# zaparoo-frontend

./: .clang-tidy  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  Dockerfile.arm32  Dockerfile.lint  Dockerfile.toolchain  README.md  justfile  rust-toolchain.toml
.github/: dependabot.yml
.github/contributors/: signatures.json
.github/workflows/: ci.yml  cla.yml  lint-image-build.yml  release.yml  toolchain-build.yml
cmake/: ZaparooLint.cmake  ZaparooRust.cmake
docs/: architecture.md  building.md  customization.md  style.md  system-logo-audit.md
packaging/: deploy-desktop.sh
rust/: Cargo.toml  deny.toml  rust-toolchain.toml
rust/.cargo/: config.toml
rust/build-info/: Cargo.toml  build.rs
rust/build-info/src/: lib.rs
rust/frontend/: Cargo.toml  build.rs
rust/launcher/: Cargo.toml  build.rs
rust/launcher/src/: lib.rs  media_image_cache.rs  mister_runtime.rs
rust/launcher/src/models/: browse.rs  categories.rs  favorites.rs  game_info.rs  games.rs  mod.rs  model_includes.h  recents.rs  systems.rs
rust/zaparoo-core/: Cargo.toml
rust/zaparoo-core/src/: client.rs  config.rs  credits.rs  input_actions.rs  lib.rs  logger.rs  media_types.rs  persist.rs  platform_paths.rs  remote_resource.rs  systems_catalog.rs
rust/zaparoo-core/src/endpoints/: catalog.rs
rust/zaparoo-core/src/endpoints/snapshots/: zaparoo_core__endpoints__catalog__tests__shape_catalog_snapshot_matches_fixture.snap
rust/zaparoo-core/src/snapshots/: zaparoo_core__systems_catalog__tests__catalog_snapshot_matches_fixture.snap
rust/zaparoo-core/src/store/: mod.rs
scripts/: build-arm32.sh  build-toolchain.sh  check-translations-updated.sh  deploy-mister.sh  package-macos-app.sh  package-mister-release.sh  run-macos-mister-core.sh
scripts/toolchain/: VERSION
src/LICENSES/: Lucide-ATTRIBUTION.txt  MxPlus-ATTRIBUTION.txt  Names_MiSTer-ATTRIBUTION.txt  NotoSans-ATTRIBUTION.txt  NotoSans-OFL.txt  NounProject-ATTRIBUTION.txt  Qt-LGPL-NOTICE.txt  Streamline-ATTRIBUTION.txt  Zaparoo-ASSETS-NOTICE.txt  console-logos-ATTRIBUTION.txt  (+2 more)
src/app/: main.cpp  (+8 more)
tests/: CMakeLists.txt
(+151 files in other folders)
