# SPDX-License-Identifier: LicenseRef-PolyForm-Noncommercial-1.0.0
# SPDX-FileCopyrightText: 2026 Callan Barrett

[package]
name = "zaparoo-launcher-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "zaparoo_launcher_rs"
crate-type = ["staticlib"]
path = "src/lib.rs"

[dependencies]
zaparoo-core = { path = "../zaparoo-core" }
cxx = "1"
cxx-qt = "0.7"
cxx-qt-lib = { version = "0.7", features = ["qt_gui", "qt_qml", "qt_quickcontrols"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
tracing = "0.1"

[build-dependencies]
cxx-qt-build = { version = "0.7", features = ["link_qt_object_files"] }
