# SPDX-License-Identifier: LicenseRef-PolyForm-Noncommercial-1.0.0
# SPDX-FileCopyrightText: 2026 Callan Barrett

[package]
name = "zaparoo-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json", "local-time"] }
time = { version = "0.3", features = ["local-offset", "macros"] }
tracing-appender = "0.2"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros", "net"] }
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
uuid = { version = "1", features = ["v4"] }
dirs-next = "2"
